# tauri-plugin-keepawake

./: .gitignore  Cargo.toml  README.md  build.rs  bun.lockb  package.json
examples/tauri-app/: bun.lockb  package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/autogenerated/: reference.md
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
