[package]
name = "tauri-plugin-keepawake"
version = "0.1.1"
authors = [ "thewh1teagle" ]
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
repository = "https://github.com/thewh1teagle/tauri-plugin-keepawake"
license = "MIT"
keywords = ["tauri", "plugin", "keepawake"]
description = "A Tauri plugin to keep the system awake"
links = "tauri-plugin-keepawake"

[dependencies]
tauri = { version = "2.1.0" }
serde = "1.0"
thiserror = "2"
keepawake = "0.5.1"

[build-dependencies]
tauri-plugin = { version = "2.0.2", features = ["build"] }
